<resources>
    <string name="app_name">Pruenaf1</string>
    <string name="btnCntMqtt">Enviar</string>
    <string name="btnCntHttp">Enviar</string>
    <string name="btnCntCoap">Enviar</string>
    <string name="mqtt">Mqtt</string>
    <string name="http">Http</string>
    <string name="coap">Coap</string>
    <string name="sensores_luz_apr_ximidad_y_gps">Sensores: luz,apróximidad y GPS</string>
    <string name="label_host"></string>
    <string name="label_token"></string>
    <string name="name_host">Host</string>
    <string name="name_token">Token</string>
</resources>