<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/editHost"
        android:layout_width="293dp"
        android:layout_height="47dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/label_host"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="632dp"
        android:layout_marginRight="8dp"
        android:text="Ubicacion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/namehost"
        android:layout_width="59dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/name_host"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mqtt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />
    <Button
        android:id="@+id/btnCntCoap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="52dp"
        android:onClick="clickGet"
        android:text="@string/btnCntCoap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCtnHttp" />
    <EditText
        android:id="@+id/nametoken"
        android:layout_width="59dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/name_token"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensores_luz_apr_ximidad_y_gps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/http"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />
    <Button
        android:id="@+id/btnCntMqtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="288dp"
        android:onClick="sendMessageMqtt"
        android:text="@string/btnCntMqtt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btnCtnHttp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="64dp"
        android:onClick="sendMessageHttp"
        android:text="@string/btnCntHttp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCntMqtt" />
    <EditText
        android:id="@+id/edittoken"
        android:layout_width="298dp"
        android:layout_height="51dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="140dp"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/label_token"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="379dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textCode"
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.0"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textCodeName"
            android:layout_width="139dp"
            android:layout_height="22dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.0"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textRtt"
            android:layout_width="133dp"
            android:layout_height="22dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.0"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />
</androidx.constraintlayout.widget.ConstraintLayout>